--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
         "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
@@ -27,7 +28,10 @@
     "eslintConfig": {
         "extends": [
             "react-app",
-            "react-app/jest"
+            "plugin:jsx-a11y/recommended"
+        ],
+        "plugins": [
+            "jsx-a11y"
         ]
     },
     "browserslist": {
