--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
-        "tailwindcss": "^2.2.19"
+        "tailwindcss": "^2.2.19",
+        "@tailwindcss/forms": "^0.3.4"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
