--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.1.0",
     "private": false,
     "dependencies": {
+        "@tailwindcss/forms": "^0.3.4",
         "react": "^17.0.2",
+        "react-custom-scrollbars-2": "^4.4.0",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
-        "tailwindcss": "^2.2.19",
-        "@tailwindcss/forms": "^0.3.4"
+        "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
         "@types/react": "^17.0.37",
