--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": false,
     "dependencies": {
         "@tailwindcss/forms": "^0.3.4",
+        "pure-react-carousel": "^1.27.8",
         "react": "^17.0.2",
-        "react-custom-scrollbars-2": "^4.4.0",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "tailwindcss": "^2.2.19"
