--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-router-dom": "^6.0.2",
         "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
