--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^4.1.3",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "autoprefixer": "^10.4.0",
@@ -23,7 +22,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "build-css && react-scripts build",
+        "build": "npm run-script build-css && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "build-css": "postcss src/css/tailwind.css -o public/css/tailwind-output.css",
