--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "tailwindcss": "^2.2.19"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^4.1.3",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "autoprefixer": "^10.4.0",
